force-app/main/default/objects/CampaignMember/fields/Date_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Date_Bounced__c</fullName>
    <description>When the mail has been bounced, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</description>
    <inlineHelpText>When the mail has been bounced, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</inlineHelpText>
    <label>Date Bounced</label>
    <type>DateTime</type>
</CustomField>