force-app/main/default/objects/CampaignMember/fields/Date_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Date_Clicked__c</fullName>
    <description>When the mail has been clicked, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</description>
    <inlineHelpText>When the mail has been clicked, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</inlineHelpText>
    <label>Date Clicked</label>
    <type>DateTime</type>
</CustomField>