force-app/main/default/objects/CampaignMember/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>When the mail has been opened, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</description>
    <inlineHelpText>When the mail has been opened, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</inlineHelpText>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>