force-app/main/default/objects/CampaignMember/fields/Date_Responded__c.field-meta.xml
<CustomField>
    <fullName>Date_Responded__c</fullName>
    <description>When there is a response to the mail, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</description>
    <inlineHelpText>When there is a response to the mail, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</inlineHelpText>
    <label>Date Responded</label>
    <type>DateTime</type>
</CustomField>