force-app/main/default/objects/CampaignMember/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <description>When the mail has been sent, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</description>
    <inlineHelpText>When the mail has been sent, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</inlineHelpText>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>