force-app/main/default/objects/CampaignMember/fields/Date_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Date_Unsubscribed__c</fullName>
    <description>When the mail has been unsubscribed, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</description>
    <inlineHelpText>When the mail has been unsubscribed, updated with workflow (triggered by Autopilot &quot;Set Campaign Status&quot;)</inlineHelpText>
    <label>Date Unsubscribed</label>
    <type>DateTime</type>
</CustomField>