force-app/main/default/objects/CampaignMember/fields/Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced__c</fullName>
    <description>Checked if Date_Bounced__c is not null.</description>
    <formula>NOT(ISNULL(Date_Bounced__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>