force-app/main/default/objects/CampaignMember/fields/Email_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Email_Clicked__c</fullName>
    <description>Checked if Date_Clicked__c is not null.</description>
    <formula>NOT(ISNULL(Date_Clicked__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Clicked</label>
    <type>Checkbox</type>
</CustomField>