force-app/main/default/objects/CampaignMember/fields/Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>Email_Opened__c</fullName>
    <description>Checked if Date_Opened__c is not null.</description>
    <formula>NOT(ISNULL(Date_Opened__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Opened</label>
    <type>Checkbox</type>
</CustomField>