force-app/main/default/objects/CampaignMember/fields/Email_Responded__c.field-meta.xml
<CustomField>
    <fullName>Email_Responded__c</fullName>
    <description>Checked if Date_Responded__c is not null.</description>
    <formula>NOT(ISNULL(Date_Responded__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Responded</label>
    <type>Checkbox</type>
</CustomField>