force-app/main/default/objects/CampaignMember/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <description>Checked if Date_Sent__c is not null.</description>
    <formula>NOT(ISNULL(Date_Sent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>