force-app/main/default/objects/CampaignMember/fields/Email_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsubscribed__c</fullName>
    <description>Checked if Date_Unsubscribed__c is not null.</description>
    <formula>NOT(ISNULL(Date_Unsubscribed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>