force-app/main/default/objects/CampaignMember/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <description>Response given on the registration form</description>
    <inlineHelpText>Response given on the registration form</inlineHelpText>
    <label>Event Participation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>