force-app/main/default/objects/CampaignMember/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>To be copied to Lead</description>
    <inlineHelpText>To be copied to Lead</inlineHelpText>
    <label>Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>