force-app/main/default/objects/CampaignMember/fields/Lead_Source_Webform__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Webform__c</fullName>
    <description>To be copied to Lead</description>
    <inlineHelpText>To be copied to Lead</inlineHelpText>
    <label>Lead Source Webform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>